force-app/main/default/objects/Location/fields/Outbound_Lead_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Lead_Time_Hours__c</fullName>
    <description
  >Pick-and-pack lead time at this warehouse before shipment. Added to transit hours for delivery ETA.</description>
    <inlineHelpText
  >Hours from order acceptance to dispatch from this location.</inlineHelpText>
    <label>Outbound Lead Time (Hours)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>