force-app/main/default/objects/Location/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description
  >Geographic region for warehouse transit and delivery ETA calculations in the AI Parts orchestrator.</description>
    <inlineHelpText
  >Region used for transit time rules (e.g. North America, Europe).</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North America</fullName>
                <default>true</default>
                <label>North America</label>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>