force-app/main/default/objects/Location/fields/Supports_Expedite__c.field-meta.xml
<CustomField>
    <fullName>Supports_Expedite__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >When true, premium SLA / critical priority cases may receive reduced ETA at this warehouse.</description>
    <inlineHelpText
  >Allows expedited fulfillment for premium SLA cases.</inlineHelpText>
    <label>Supports Expedite</label>
    <type>Checkbox</type>
</CustomField>